--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "data": "json-server --port 12345 --watch ./data/db.json"
   },
   "devDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "json-server": "^0.17.1",
+    "normalize.css": "^8.0.1",
+    "path-browserify": "^1.0.1"
   }
 }
